--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
 </head>
 <body>
-    <h1>Hi there!</h1>
+    <header class="container">
+        <nav>
+            <div class="nav-title">
+                <a href="#">thisIsMyPortfolio|<span>XY</span></a>
+            </div>
+            <div class="nav-link">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Project</a></li>
+                    <li><a href="#">Contant Me!</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
