fourth commit/hero main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
         </nav>
     </header>
     <main class="container">
-        
+        <div class="main-container">
+            <div class="myprofile">
+                <div class="back-style">
+                    <span class="one"></span>
+                    <span class="two"></span>
+                    <span class="three"></span>
+                </div>
+                <img src="img/img-me-nbg.png" alt="profile">
+            </div>
+            <div class="brief-background">
+                <h1>Lorem, ipsum dolor.</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, minus?</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
