fifth commit/hero main done

--- a/index.html
+++ b/index.html
@@ -33,9 +33,15 @@
                 <img src="img/img-me-nbg.png" alt="profile">
             </div>
             <div class="brief-background">
-                <h1>Lorem, ipsum dolor.</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, minus?</p>
+                <h1>Hi I'm Jasper</h1>
+                <p>I've been studying front-end Dev for the past 2 months.</p>
+                <p>Have been struggling with learning JavaScript but small progress is still a progress.</p>
+                <div class="clickme">
+                    <p>Click the button below to know more about myself</p>
+                    <a href="#">Click me!</a>
+                </div>
             </div>
+            
         </div>
     </main>
 </body>
